[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/GameOverManager.gd" type="Script" id=1]
[ext_resource path="res://Sprites/StartScreen/ButtonSairClickedl.png" type="Texture" id=2]
[ext_resource path="res://Sprites/StartScreen/ButtonSairNormal.png" type="Texture" id=3]
[ext_resource path="res://Sprites/StartScreen/JogarDeNovoCLicked.png" type="Texture" id=4]
[ext_resource path="res://Sprites/StartScreen/JogarDeNovoNormal.png" type="Texture" id=5]
[ext_resource path="res://Sprites/StartScreen/VoceEmpatou.png" type="Texture" id=6]
[ext_resource path="res://Sprites/StartScreen/VoltarAoMenuNormal.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Emp.png" type="Texture" id=8]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Emp" type="Sprite" parent="."]
position = Vector2( 505.5, 283 )
scale = Vector2( 1.29125, 1 )
texture = ExtResource( 8 )

[node name="GameOver" type="Sprite" parent="."]
position = Vector2( 522, 155 )
texture = ExtResource( 6 )

[node name="TryAgain" type="TextureButton" parent="."]
margin_left = 375.0
margin_top = 322.0
margin_right = 655.0
margin_bottom = 397.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="VoltarAoMenu" type="TextureButton" parent="."]
margin_left = 375.0
margin_top = 403.0
margin_right = 655.0
margin_bottom = 478.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 7 )

[node name="QUIT" type="TextureButton" parent="."]
margin_left = 374.0
margin_top = 484.0
margin_right = 654.0
margin_bottom = 559.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 3 )

[connection signal="pressed" from="TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="pressed" from="VoltarAoMenu" to="." method="_on_VoltarAoMenu_pressed"]
[connection signal="pressed" from="QUIT" to="." method="_on_QUIT_pressed"]
